--- a/src/list.desktop.css
+++ b/src/list.desktop.css
@@ -1,3 +1,23 @@
 @media (min-width: 801px) {
+  .list-container {
+    width: 80%;
+  }
 
+  .list {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 2% 1% 0 1%;
+  }
+
+  .more_results {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 2.5rem;
+    cursor: pointer;
+    color: blue;
+  }
 }
