--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,6 @@
-body {
+html, body {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: 'Helvetica';
@@ -13,17 +15,22 @@ a:hover {
   background-color: yellow;
 }
 
+#app {
+  height: 100%;
+  width: 100%;
+}
+
 @media (max-width: 600px) {
   #app {
     display: flex;
-    flex-flow: column;
+    flex-flow: column nowrap;
   }
 }
 
 @media (max-width: 800px) and (min-width: 601px) {
   #app {
     display: flex;
-    flex-flow: column;
+    flex-flow: column nowrap;
   }
 }
 
