--- a/src/styles/control_bar/control_bar.desktop.css
+++ b/src/styles/control_bar/control_bar.desktop.css
@@ -6,6 +6,7 @@
     justify-content: flex-start;
     align-items: center;
     background-color: #EEEEEE;
+    padding: .5% 0 5% 0;
   }
 
   .app-title {
@@ -13,6 +14,7 @@
     font-size: 1.75rem;
     font-weight: bold;
     margin: 10%;
+    flex: 1 0 0;
   }
 
   .control-container {
@@ -22,6 +24,7 @@
     align-items: center;
     width: 70%;
     height: 5rem;
+    flex: 1 0 0;
   }
 
   .search-box {
@@ -52,5 +55,21 @@
     align-self: flex-start;
     margin: 0 0 5% 0;
     width: 100%;
+  }
+
+  .control-bar-spacer {
+    flex: 6 0 0;
+  }
+
+  .control-bar-results-container {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    color: blue;
+    width: 80%;
+    flex: .5 0 0;
+    cursor: pointer;
   }
 }
