--- a/src/styles/list/list.desktop.css
+++ b/src/styles/list/list.desktop.css
@@ -12,12 +12,6 @@
   }
 
   .more_results {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 2.5rem;
-    cursor: pointer;
-    color: blue;
+    display: none;
   }
 }
