--- a/src/styles/list/list.mobile.css
+++ b/src/styles/list/list.mobile.css
@@ -1,4 +1,9 @@
 @media (max-width: 600px) {
+  .list-container {
+    width: 100%;
+    height: 85%;
+  }
+
   .list {
     display: flex;
     flex-flow: row wrap;
